2009-05-04  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* TabControl.cs: call Focus() to emit GotFocus event at the
	proper time when SelectionIndex changes. Fixes #499887.

2009-05-03  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* MonthCalendar.cs: In SetBoundsCore always do the bounds check to
	have valid values, even if BoundSpecified is not including
	Size/Height/Width - this is useful when we are in a control using Dock
	or Anchor.
	Fixes part of #483146.

2009-04-27  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ComboBox.cs: When losing the focus, if our textbox is not null,
	close its auto complete list, if any.
	Fixes part of #489339.

2009-04-27  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* ListView.cs: Make OnColumnClick +internal to be used by a11y.

2009-04-27  Brad Taylor  <brad@getcoded.net>

	* ToolStripButton.cs: Emit an internal event when CheckOnClick is
	changed.

2009-04-26  Carlos Alberto Cortez <calberto.cortez@gmail.com> 

	* XplatUIX11.cs: Properly support UTF8 when handling the
	SelectionRequest event - this is helpful supporting some window
	managers, such KDE, that explictly request the text in utf8, as
	opposed to gnome, that supports ascii.
	Fixes #489393.

2009-04-26  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ToolStripDropDownItem.cs: When assigning a new
	ToolStripDropDownMenu, let it know we are its OwnerItem. This way the
	Capture duties performed by Application/ToolStripManager are handled
	nicely and we don't end up in an inconsisten stat.
	Fixes #492815.

2009-04-25  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ToolStrip.cs: Even if we are not exactly a MenuStrip instance, close
	any ToolStripDropDownItem when receiving a mouse down event in an
	empty area.

2009-04-24  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* ToolBarButton.cs: add UIA events for style and dropdownmenu changes.

2009-04-24  Andrés G. Aragoneses  <aaragoneses@novell.com>
